<resources>
    <string name="app_name">AlarmMe</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="forgot_password">¿Has olvidado tu contraseña?</string>
    <string name="login">Login</string>
    <string name="dont_have_account">¿Aún no tienes una cuenta?</string>
    <string name="sign_up">Regístrate</string>
    <string name="repeat_password">Repeat password</string>
    <string name="hint_fullname">Fullname</string>
    <string name="hint_register">Register</string>
    <string name="title_activity_board">BoardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="string_alarm">Alarms</string>
    <string name="create">Crear</string>
    <string name="choose_type">Elige un tipo de alarma</string>
    <string name="write_title">Escriba el título de la alarma</string>
    <string name="choose_consorcio">Elige un consorcio</string>
    <string name="choose_line">Elige una línea</string>
    <string name="choose_parada">Elige una parada</string>
    <string name="string_log_out">Log Out</string>
    <string name="profile">Perfil</string>
    <string name="string_new_alarm">New Alarm</string>
    <string name="alert_dialog_ok">Borrar</string>
    <string name="your_profile">Tu perfil</string>
    <string name="edit_password">Editar contraseña</string>
    <string name="edit_name">Editar nombre</string>
    <string name="sign_google">Regístrate con Google</string>

    <!-- Error strings -->
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>

    <!-- Transition type strings -->
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>

    <string name="geofence_transition_notification_text">
        Click notification to return to app
    </string>

</resources>
