<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".ui.AlarmCreateActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/choose_type"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/blue_grey_500"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/create_alarm_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:editable="false"
        android:maxLength="50"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@color/blue_grey_300"
        android:theme="@style/EditText.Grey"
        app:layout_constraintEnd_toEndOf="@+id/textView1"
        app:layout_constraintStart_toStartOf="@+id/textView1"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/write_title"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/blue_grey_500"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/create_alarm_type"
        app:layout_constraintStart_toStartOf="@+id/create_alarm_type"
        app:layout_constraintTop_toBottomOf="@+id/create_alarm_type" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/create_alarm_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLength="50"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@color/blue_grey_300"
        android:theme="@style/EditText.Grey"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/type_transport"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_alarm_title">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/choose_consorcio"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/blue_grey_500"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/create_alarm_consorcio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLength="50"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/blue_grey_300"
            android:theme="@style/EditText.Grey"
            app:layout_constraintEnd_toEndOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/choose_line"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/blue_grey_500"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/create_alarm_consorcio"
            app:layout_constraintStart_toStartOf="@+id/create_alarm_consorcio"
            app:layout_constraintTop_toBottomOf="@+id/create_alarm_consorcio" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/create_alarm_linea"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLength="50"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/blue_grey_300"
            android:theme="@style/EditText.Grey"
            app:layout_constraintEnd_toEndOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/choose_parada"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/blue_grey_500"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/create_alarm_linea"
            app:layout_constraintStart_toStartOf="@+id/create_alarm_linea"
            app:layout_constraintTop_toBottomOf="@+id/create_alarm_linea" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/create_alarm_parada"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLength="50"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/blue_grey_300"
            android:theme="@style/EditText.Grey"
            app:layout_constraintEnd_toEndOf="@+id/textView5"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/create_btn"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:background="@drawable/btn_rounded_green_300"
        android:text="@string/create"
        android:textAllCaps="false"
        android:textColor="@color/blue_grey_900"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/type_transport" />
</androidx.constraintlayout.widget.ConstraintLayout>