<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <ImageView
        android:id="@+id/profile_photo"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/profile_edit_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="172dp"
        android:layout_marginEnd="32dp"
        android:clickable="true"
        android:visibility="gone"
        android:src="@drawable/ic_photo_camera_white_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profile_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/your_profile"
        android:visibility="gone"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/blue_grey_300"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_edit_photo" />

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="0dp"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/profile_title"
        app:layout_constraintStart_toStartOf="@+id/profile_title"
        app:layout_constraintTop_toBottomOf="@+id/profile_title" />

    <TextView
        android:id="@+id/profile_email"
        android:layout_width="0dp"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:shadowColor="@android:color/white"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/profile_name"
        app:layout_constraintStart_toStartOf="@+id/profile_name"
        app:layout_constraintTop_toBottomOf="@+id/profile_name" />

    <Button
        android:id="@+id/profile_edit_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        android:background="@color/colorPrimaryDark"
        android:text="@string/edit_password"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/profile_edit_name"
        app:layout_constraintStart_toStartOf="@+id/profile_edit_name"
        app:layout_constraintTop_toBottomOf="@+id/profile_edit_name" />

    <Button
        android:id="@+id/profile_edit_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:visibility="gone"
        android:background="@color/colorPrimary"
        android:text="@string/edit_name"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/profile_email"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/profile_email"
        app:layout_constraintTop_toBottomOf="@+id/profile_email" />

    <ProgressBar
        android:id="@+id/profile_progresss_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/profile_photo" />

</androidx.constraintlayout.widget.ConstraintLayout>